# llama.cpp

./: convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_llama_ggml_to_gguf.py  convert_lora_to_gguf.py
benches/dgx-spark/: dgx-spark.md
benches/mac-m2-ultra/: mac-m2-ultra.md
ci/: README-MUSA.md  README.md
common/: CMakeLists.txt  arg.cpp  arg.h  chat-parser-xml-toolcall.cpp  chat-parser-xml-toolcall.h  chat-parser.cpp  chat-parser.h  chat-peg-parser.cpp  chat-peg-parser.h  chat.cpp  chat.h  common.cpp  common.h  console.cpp  console.h  debug.cpp  debug.h  download.cpp  download.h  http.h  json-partial.cpp  json-partial.h  json-schema-to-grammar.cpp  json-schema-to-grammar.h  llguidance.cpp  log.cpp  log.h  ngram-cache.cpp  ngram-cache.h  ngram-map.cpp  ngram-map.h  ngram-mod.cpp  ngram-mod.h  peg-parser.cpp  peg-parser.h  preset.cpp  preset.h  regex-partial.cpp  regex-partial.h  sampling.cpp  (+5 more)
common/jinja/: README.md  caps.cpp  caps.h  lexer.cpp  lexer.h  parser.cpp  parser.h  runtime.cpp  runtime.h  string.cpp  string.h  utils.h  value.cpp  value.h
examples/: CMakeLists.txt  convert_legacy_llama.py  json_schema_pydantic_example.py  json_schema_to_grammar.py  pydantic_models_to_grammar.py  pydantic_models_to_grammar_examples.py  regex_to_grammar.py  server_embd.py
examples/batched/: CMakeLists.txt  README.md  batched.cpp
examples/batched.swift/: README.md
examples/convert-llama2c-to-ggml/: CMakeLists.txt  README.md  convert-llama2c-to-ggml.cpp
examples/debug/: CMakeLists.txt  README.md  debug.cpp
examples/deprecation-warning/: README.md  deprecation-warning.cpp
examples/diffusion/: CMakeLists.txt  README.md  diffusion-cli.cpp
examples/embedding/: CMakeLists.txt  README.md  embedding.cpp
examples/eval-callback/: CMakeLists.txt  README.md  eval-callback.cpp
examples/gen-docs/: CMakeLists.txt  gen-docs.cpp
examples/gguf/: CMakeLists.txt  gguf.cpp
examples/gguf-hash/: CMakeLists.txt  README.md  gguf-hash.cpp
examples/idle/: CMakeLists.txt  README.md  idle.cpp
examples/llama.swiftui/: README.md
examples/lookahead/: CMakeLists.txt  README.md  lookahead.cpp
examples/lookup/: CMakeLists.txt  README.md  lookup-create.cpp  lookup-merge.cpp  lookup-stats.cpp  lookup.cpp
examples/model-conversion/: README.md  requirements.txt
examples/parallel/: CMakeLists.txt  README.md  parallel.cpp
examples/passkey/: CMakeLists.txt  README.md  passkey.cpp
examples/retrieval/: CMakeLists.txt  README.md  retrieval.cpp
examples/save-load-state/: CMakeLists.txt  save-load-state.cpp
examples/simple/: CMakeLists.txt  README.md  simple.cpp
examples/simple-chat/: CMakeLists.txt  README.md  simple-chat.cpp
examples/simple-cmake-pkg/: CMakeLists.txt  README.md
examples/speculative/: CMakeLists.txt  README.md  speculative.cpp
examples/speculative-simple/: CMakeLists.txt  README.md  speculative-simple.cpp
examples/sycl/: CMakeLists.txt  README.md  ls-sycl-device.cpp
examples/training/: CMakeLists.txt  README.md  finetune.cpp
ggml/include/: ggml-alloc.h  ggml-backend.h  ggml-cpp.h  ggml-cpu.h  ggml-metal.h  ggml-opt.h  ggml.h  gguf.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-dl.cpp  ggml-backend-dl.h  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml-opt.cpp  ggml-quants.c  ggml-threading.cpp  ggml.c  ggml.cpp  gguf.cpp
ggml/src/ggml-rpc/: CMakeLists.txt  ggml-rpc.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  vulkan-shaders-gen.cpp
include/: llama-cpp.h  llama.h
models/templates/: README.md
pocs/: CMakeLists.txt
pocs/vdot/: CMakeLists.txt  q8dot.cpp  vdot.cpp
scripts/: compare-llama-bench.py  compare-logprobs.py  create_ops_docs.py  fetch_server_test_models.py  gen-unicode-data.py  get_chat_template.py  server-bench.py  sync_vendor.py  tool_bench.py  verify-checksum-models.py  xxd.cmake
scripts/jinja/: jinja-tester.py  requirements.txt
src/: CMakeLists.txt  llama-adapter.cpp  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-context.h  llama-cparams.cpp  llama-cparams.h  llama-grammar.cpp  llama-grammar.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-impl.cpp  llama-impl.h  llama-io.cpp  llama-io.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.cpp  llama-memory.h  llama-mmap.cpp  llama-mmap.h  llama-model-loader.cpp  llama-model-loader.h  (+13 more)
src/models/: afmoe.cpp  apertus.cpp  arcee.cpp  arctic.cpp  arwkv7.cpp  baichuan.cpp  bert.cpp  (+106 more)
tests/: CMakeLists.txt  get-model.cpp  get-model.h  gguf-model-data.cpp  gguf-model-data.h  test-alloc.cpp  test-arg-parser.cpp  test-autorelease.cpp  test-backend-ops.cpp  test-backend-sampler.cpp  test-barrier.cpp  test-c.c  test-chat-parser.cpp  test-chat-peg-parser.cpp  test-chat-template.cpp  test-chat.cpp  test-double-float.cpp  test-gbnf-validator.cpp  test-gguf-model-data.cpp  test-gguf.cpp  test-grammar-integration.cpp  test-grammar-llguidance.cpp  test-grammar-parser.cpp  test-jinja.cpp  test-json-partial.cpp  test-json-schema-to-grammar.cpp  test-llama-grammar.cpp  test-log.cpp  test-model-load-cancel.cpp  test-mtmd-c-api.c  test-opt.cpp  test-peg-parser.cpp  test-quantize-fns.cpp  test-quantize-perf.cpp  test-quantize-stats.cpp  test-regex-partial.cpp  test-rope.cpp  test-sampling.cpp  test-state-restore-fragmented.cpp  test-thread-safety.cpp  (+6 more)
tools/: CMakeLists.txt
tools/batched-bench/: CMakeLists.txt  README.md  batched-bench.cpp
tools/cvector-generator/: CMakeLists.txt  README.md  completions.txt  cvector-generator.cpp  negative.txt  positive.txt
tools/export-lora/: CMakeLists.txt  README.md  export-lora.cpp
tools/gguf-split/: CMakeLists.txt  README.md  gguf-split.cpp
tools/quantize/: CMakeLists.txt  README.md  quantize.cpp
tools/rpc/: CMakeLists.txt  README.md  rpc-server.cpp
(+351 files in other folders)
